--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "DragonBallFinance",
   "name": "DragonBallFinance",
-  "description": "Farm DBALL with DragonBallFinance LP Tokens",
+  "description": "Farm Coal with DragonBallFinance LP Tokens",
   "icons": [
     {
       "src": "favicon.ico",
